<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login1"
        android:layout_width="309dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorOrangeButton"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/username_txt"
        app:layout_constraintEnd_toEndOf="@+id/username_txt"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/username_txt" />

    <TextView
        android:id="@+id/username_txt"
        android:layout_width="348dp"
        android:layout_height="285dp"
        android:background="#FFFFFF"
        android:layout_marginTop="170sp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="171dp"
        android:layout_height="70dp"
        android:layout_marginTop="180sp"
        android:background="#FF808080"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/username_txt"
        app:layout_constraintStart_toStartOf="@+id/username_txt"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnregister"
        android:layout_width="178dp"
        android:layout_height="70dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_button"
        android:text="@string/buat_akun"
        app:layout_constraintBottom_toTopOf="@+id/username_txt"
        app:layout_constraintEnd_toEndOf="@+id/username_txt"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="149dp"
        android:layout_height="156dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/ForgetPass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_kata_sandi"
        app:layout_constraintBottom_toBottomOf="@+id/username_txt"
        app:layout_constraintEnd_toEndOf="@+id/username_txt"
        app:layout_constraintStart_toStartOf="@+id/username_txt"
        app:layout_constraintTop_toBottomOf="@+id/btn_login1"
        android:clickable="true"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_fb"
        android:layout_width="297dp"
        android:layout_height="61dp"
        android:background="#3F51B5"
        android:drawableStart="@drawable/fb"
        android:drawableLeft="@drawable/fb"
        android:paddingStart="@android:dimen/app_icon_size"
        android:paddingLeft="@android:dimen/app_icon_size"
        android:text="@string/login_with_facebook"
        android:textColor="#FFFFFF"
        android:layout_marginTop="470sp"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_mail"
        android:layout_width="301dp"
        android:layout_height="57dp"
        android:layout_below="@+id/btn_fb"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/gmail"
        android:paddingLeft="@android:dimen/app_icon_size"
        android:text="@string/login_with_g_mail"
        android:textColor="#000000"
        android:layout_marginTop="550sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/user_txt"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nama_pengguna"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_login1"
        app:layout_constraintEnd_toEndOf="@+id/username_txt"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="@+id/username_txt"
        app:layout_constraintTop_toTopOf="@+id/username_txt"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="30sp"/>

    <EditText
        android:id="@+id/password_txt"
        android:layout_width="272dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/kata_sandi"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_login1"
        app:layout_constraintEnd_toEndOf="@+id/username_txt"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/username_txt"
        app:layout_constraintTop_toBottomOf="@+id/user_txt"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="30dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_txt"
        app:layout_constraintEnd_toStartOf="@+id/user_txt"
        app:layout_constraintStart_toStartOf="@+id/username_txt"
        app:layout_constraintTop_toTopOf="@+id/user_txt"
        app:srcCompat="@drawable/user"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="33dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="@+id/password_txt"
        app:layout_constraintEnd_toStartOf="@+id/password_txt"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="@+id/username_txt"
        app:layout_constraintTop_toTopOf="@+id/password_txt"
        app:srcCompat="@drawable/kunci"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>